# test-sdl-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: hello.hpp
src/: hello.cpp
